--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "dependencies": {
-    "axios": "^1.8.4",
-    "bcrypt": "^5.1.1",
-    "cheerio": "^1.0.0",
-    "cors": "^2.8.5",
-    "cron": "^4.1.4",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.12.0"
-  },
+  "name": "workout-history",
+  "version": "1.0.0",
+  "description": "Application de suivi des séances de sport et d'études",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "start": "node server.js",
+    "build": "npm install"
   },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
+  "dependencies": {
+    "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "cron": "^3.1.6",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.6.5"
   }
 }
