--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "build": "npm install"
   },
   "dependencies": {
@@ -17,5 +18,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
