--- a/vercel.json
+++ b/vercel.json
@@ -28,8 +28,19 @@
       "dest": "/index.html"
     },
     {
+      "handle": "filesystem"
+    },
+    {
       "src": "/(.*)",
       "dest": "/$1"
     }
-  ]
+  ],
+  "env": {
+    "DB_HOST": "127.0.0.1",
+    "DB_USER": "root",
+    "DB_PASSWORD": "Root123$",
+    "DB_NAME": "workout_tracker",
+    "DB_PORT": "3306",
+    "JWT_SECRET": "ton_secret_super_securise_123"
+  }
 }
